--- a/src/proxy/代理模式.md
+++ b/src/proxy/代理模式.md
@@ -120,11 +120,39 @@ public class ProxyImage extends Image {
 Java动态代理机制的出现，使得Java开发人员不用手工编写代理类，只要简单地制定一组接口及委托类对象，便能动态地获得代理类。
 代理类会负责将所有的方法调用分配到委托对象上反射执行。
 
-动态代理可以通过jdk自带的Proxy类和CGLIB实现。
+动态代理可以通过jdk自带的类和CGLIB实现。
+### Java内置的动态代理
+#### 相关类和接口
+- java.lang.reflect.Proxy：这是 Java 动态代理机制的主类，它提供了一组静态方法来为一组接口动态地生成代理类及其对象。
+``` 
+    // 方法 1: 该方法用于获取指定代理对象所关联的调用处理器
+    static InvocationHandler getInvocationHandler(Object proxy) 
+     
+    // 方法 2：该方法用于获取关联于指定类装载器和一组接口的动态代理类的类对象
+    static Class getProxyClass(ClassLoader loader, Class[] interfaces) 
+     
+    // 方法 3：该方法用于判断指定类对象是否是一个动态代理类
+    static boolean isProxyClass(Class cl) 
+     
+    // 方法 4：该方法用于为指定类装载器、一组接口及调用处理器生成动态代理类实例
+    static Object newProxyInstance(ClassLoader loader, Class[] interfaces, InvocationHandler h)
+```
+- java.lang.reflect.InvocationHandler：这是调用处理器接口，它自定义了一个 invoke 方法，用于集中处理在动态代理类对象上的方法调用，通常在该方法中实现对委托类的代理访问。每次生成动态代理类对象时都需要指定一个实现了该接口的调用处理器对象（参见 Proxy 静态方法 4 的第三个参数）。
+- java.lang.ClassLoader：这是类装载器类，负责将类的字节码装载到 Java 虚拟机（JVM）中并为其定义类对象，然后该类才能被使用。Proxy 静态方法生成动态代理类同样需要通过类装载器来进行装载才能使用，它与普通类的唯一区别就是其字节码是由 JVM 在运行时动态生成的而非预存在于任何一个 .class 文件中。
+  每次生成动态代理类对象时都需要指定一个类装载器对象（参见 Proxy 静态方法 4 的第一个参数）
+#### 代理机制及其特点
+使用 Java 动态代理。具体有如下四步骤：
+1. 通过实现 InvocationHandler 接口创建自己的调用处理器；
+2. 通过为 Proxy 类指定 ClassLoader 对象和一组 interface 来创建动态代理类；
+3. 通过反射机制获得动态代理类的构造函数，其唯一参数类型是调用处理器接口类型；
+4. 通过构造函数创建动态代理类实例，构造时调用处理器对象作为参数被传入。
+
 
 ### 参考资料
 https://www.ibm.com/developerworks/cn/java/j-lo-proxy1/
+
 http://blog.csdn.net/danchu/article/details/70238002
+
 https://www.zhihu.com/question/20794107
 
 
